--- a/app/scss/base/color/_variables.scss
+++ b/app/scss/base/color/_variables.scss
@@ -318,4 +318,4 @@ $wood: #ffc99a;
 $olive: #a58052;
 $grape: #8c354a;
 
-$stripe-g: #f2f6fa;
+$stripe-g: var(--color-contrast-low);
