--- a/app/scss/pages/_blog.scss
+++ b/app/scss/pages/_blog.scss
@@ -77,7 +77,7 @@ Usage: codyhouse.co/license
     left: 0;
     top: 50%;
     height: 150%;
-    background-color: #fff;
+    background-color: var(--color-contrast-lower);
     @include transform-skew();
     z-index: 1;
     transition: transform 0.2s ease-out;
